Welcome Page and listVideo2 Modification

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="post_media_height">200dp</dimen>
+    <dimen  name="align_left">20dp</dimen>
 
     <dimen name="seek_bar_image">150dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
