--- a/app/src/main/res/layout/activity_list_video2.xml
+++ b/app/src/main/res/layout/activity_list_video2.xml
@@ -12,6 +12,10 @@
     <FrameLayout
         android:id="@+id/video_full_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
