--- a/app/src/main/res/layout/list_video_item.xml
+++ b/app/src/main/res/layout/list_video_item.xml
@@ -6,9 +6,12 @@
     <FrameLayout
         android:id="@+id/list_item_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/post_media_height"
+        android:layout_height="220dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/xxx1" />
+        android:src="@mipmap/xxx1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
     <ImageView
@@ -19,5 +22,15 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:src="@drawable/video_click_play_selector" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_item_text"
+        android:layout_alignBottom="@id/list_item_container"
+        android:paddingLeft="@dimen/align_left"
+        android:text="Test"
+        android:textStyle="bold"
+        android:textColor="#ff21"
+        />
 
 </RelativeLayout>
