--- a/app/src/main/res/layout/activity_detail_more_type.xml
+++ b/app/src/main/res/layout/activity_detail_more_type.xml
@@ -29,7 +29,7 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-    <com.example.gsyvideoplayer.video.SampleVideo
+    <com.example.realFun.video.SampleVideo
         android:id="@+id/detail_player"
         android:layout_width="match_parent"
         android:layout_height="@dimen/post_media_height" />
