--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.example.gsyvideoplayer.MainActivity">
+        tools:context="com.example.realFun.MainActivity">
 
         <Button
             android:id="@+id/open_btn"
@@ -33,7 +33,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="List Video2" />
+            android:text="Upload Video" />
 
         <Button
             android:id="@+id/recycler"
