--- a/app/src/main/res/layout/activity_upload_video.xml
+++ b/app/src/main/res/layout/activity_upload_video.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gsyvideoplayer.view.UploadVideo">
+    tools:context="com.example.realFun.view.UploadVideo">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
