--- a/app/src/main/res/layout/activity_web_detail.xml
+++ b/app/src/main/res/layout/activity_web_detail.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp" />
 
-            <com.example.gsyvideoplayer.view.ScrollWebView
+            <com.example.realFun.view.ScrollWebView
                 android:id="@+id/scroll_webView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
