--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -5,6 +5,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/welcome"
-    tools:context="com.example.gsyvideoplayer.WelcomePage">
+    tools:context="com.example.realFun.WelcomePage">
 
 </android.support.constraint.ConstraintLayout>
