--- a/app/src/main/res/layout/list_video_item.xml
+++ b/app/src/main/res/layout/list_video_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/list_item_container_layout">
 
     <FrameLayout
         android:id="@+id/list_item_container"
@@ -11,7 +12,7 @@
         android:src="@mipmap/xxx1"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true" ></FrameLayout>
 
 
     <ImageView
@@ -26,11 +27,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/list_item_text"
-        android:layout_alignBottom="@id/list_item_container"
+        android:layout_below= "@id/list_item_container"
         android:paddingLeft="@dimen/align_left"
         android:text="Test"
         android:textStyle="bold"
         android:textColor="#ff21"
+        android:textSize="20sp"
+        android:layout_margin="5dp"
         />
 
 </RelativeLayout>
