--- a/app/src/main/res/layout/activity_upload_video.xml
+++ b/app/src/main/res/layout/activity_upload_video.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.realFun.view.UploadVideo">
+    tools:context="com.example.realFun.view.UploadVideo"
+    android:id="@+id/activity_upload_view">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,6 +23,7 @@
 
     <include layout="@layout/content_upload_video" />
 
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -29,5 +31,25 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src ="@android:drawable/ic_menu_send" />
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mProgressBar"
+        android:layout_marginTop="50dp"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_gravity="center"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/titleTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:padding="3dp"
+        android:text="@string/title"
+        android:textSize="18sp"
+
+        />
 
 </android.support.design.widget.CoordinatorLayout>
