--- a/app/src/main/res/layout/content_upload_video.xml
+++ b/app/src/main/res/layout/content_upload_video.xml
@@ -10,20 +10,22 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/activity_list_upload"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
 
         <ListView
             android:id="@+id/video_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <FrameLayout
+        <!--FrameLayout
             android:id="@+id/video_full_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true" /-->
 
 
     </RelativeLayout>
